<?xml version="1.0"?>
<package>
  <name>robotlab_msgs</name>
  <version>1.1.0</version>
  <description>The robotlab_msgs package. Common messages and services used by some robot in Robotlab Ltd packages.</description>

  <maintainer email="robotlabvn@gmail.com">Knight</maintainer>


  <license>BSD</license>

  <author email="robotlabvn@gmail.com">Knight</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <export>
  </export>
</package>
